--- a/templates/lib/systemd/system/etcd.service.j2
+++ b/templates/lib/systemd/system/etcd.service.j2
@@ -20,6 +20,7 @@ ExecStart=/usr/local/bin/etcd $DAEMON_ARGS
 Restart=on-abnormal
 #RestartSec=10s
 LimitNOFILE=65536
+Nice=-5
 
 [Install]
 WantedBy=multi-user.target
