--- a/templates/lib/systemd/system/etcd.service.j2
+++ b/templates/lib/systemd/system/etcd.service.j2
@@ -4,7 +4,7 @@
 Description=etcd - highly-available key value store
 Documentation=https://github.com/coreos/etcd
 #Documentation=man:etcd
-After=network.target
+After=network-online.target
 Wants=network-online.target
 
 [Service]
