--- a/templates/etc/default/etcd.j2
+++ b/templates/etc/default/etcd.j2
@@ -1,258 +1,313 @@
 # {{ ansible_managed }}
 
 ## etcd(1) daemon options
-## See "/usr/share/doc/etcd/Documentation/configuration.md.gz".
+## See "/usr/share/doc/etcd-server/op-guide/configuration.md.gz"
 
-### Member Flags
+### Member flags
 
-##### -name
+##### --name
 ## Human-readable name for this member.
-## default: host name returned by `hostname`.
-## This value is referenced as this node's own entries listed in the `-initial-cluster`
-## flag (Ex: `default=http://localhost:2380` or `default=http://localhost:2380,default=http://localhost:7001`).
-## This needs to match the key used in the flag if you're using [static boostrapping](clustering.md#static).
+## This value is referenced as this node's own entries listed in the
+## `--initial-cluster` flag (e.g., `default=http://localhost:2380`). This
+## needs to match the key used in the flag if using static bootstrapping. When
+## using discovery, each member must have a unique name. `Hostname` or
+## `machine-id` can be a good choice.
+## default: "default"
 ETCD_NAME="{{ etcd_name }}"
 
-##### -data-dir
+##### --data-dir
 ## Path to the data directory.
+## default: "${name}.etcd"
 ETCD_DATA_DIR="{{ etcd_data_dir }}"
 
-##### -wal-dir
-## Path to the dedicated wal directory. If this flag is set, etcd will write the
-## WAL files to the walDir rather than the dataDir. This allows a dedicated disk
-## to be used, and helps avoid io competition between logging and other IO operations.
+##### --wal-dir
+## Path to the dedicated wal directory. If this flag is set, etcd will write
+## the WAL files to the walDir rather than the dataDir. This allows a
+## dedicated disk to be used, and helps avoid io competition between logging
+## and other IO operations.
 ## default: ""
 # ETCD_WAL_DIR
 
-##### -snapshot-count
+##### --snapshot-count
 ## Number of committed transactions to trigger a snapshot to disk.
-## default: "10000"
+## default: "100000"
 ETCD_SNAPSHOT_COUNT="{{ etcd_snapshot_count }}"
 
-##### -heartbeat-interval
+##### --heartbeat-interval
 ## Time (in milliseconds) of a heartbeat interval.
 ## default: "100"
 # ETCD_HEARTBEAT_INTERVAL="100"
 
-##### -election-timeout
-## Time (in milliseconds) for an election to timeout.
-## See /usr/share/doc/etcd/Documentation/tuning.md
+##### --election-timeout
+## Time (in milliseconds) for an election to timeout. See
+## /usr/share/doc/etcd-server/tuning.md.gz for details.
 ## default: "1000"
 # ETCD_ELECTION_TIMEOUT="1000"
 
-##### -listen-peer-urls
-## List of URLs to listen on for peer traffic. This flag tells the etcd to accept
-## incoming requests from its peers on the specified scheme://IP:port combinations.
-## Scheme can be either http or https. If 0.0.0.0 is specified as the IP, etcd
-## listens to the given port on all interfaces. If an IP address is given as
-## well as a port, etcd will listen on the given port and interface.
-## Multiple URLs may be used to specify a number of addresses and ports to listen on.
-## The etcd will respond to requests from any of the listed addresses and ports.
+##### --listen-peer-urls
+## List of URLs to listen on for peer traffic. This flag tells the etcd to
+## accept incoming requests from its peers on the specified scheme://IP:port
+## combinations. Scheme can be either http or https.If 0.0.0.0 is specified as
+## the IP, etcd listens to the given port on all interfaces. If an IP address is
+## given as well as a port, etcd will listen on the given port and interface.
+## Multiple URLs may be used to specify a number of addresses and ports to listen
+## on. The etcd will respond to requests from any of the listed addresses and
+## ports.
+## default: "http://localhost:2380"
 ## example: "http://10.0.0.1:2380"
 ## invalid example: "http://example.com:2380" (domain name is invalid for binding)
-## default: "http://localhost:2380,http://localhost:7001"
 ETCD_LISTEN_PEER_URLS="{{ etcd_listen_peer_urls }}"
 
-##### -listen-client-urls
-## List of URLs to listen on for client traffic. This flag tells the etcd to accept
-## incoming requests from the clients on the specified scheme://IP:port combinations.
-## Scheme can be either http or https. If 0.0.0.0 is specified as the IP, etcd
-## listens to the given port on all interfaces. If an IP address is given as
-## well as a port, etcd will listen on the given port and interface.
-## Multiple URLs may be used to specify a number of addresses and ports to listen on.
-## The etcd will respond to requests from any of the listed addresses and ports.
-## (ADVERTISE_CLIENT_URLS is required when LISTEN_CLIENT_URLS is set explicitly).
+##### --listen-client-urls
+## List of URLs to listen on for client traffic. This flag tells the etcd to
+## accept incoming requests from the clients on the specified scheme://IP:port
+## combinations. Scheme can be either http or https. If 0.0.0.0 is specified as
+## the IP, etcd listens to the given port on all interfaces. If an IP address is
+## given as well as a port, etcd will listen on the given port and interface.
+## Multiple URLs may be used to specify a number of addresses and ports to listen
+## on. The etcd will respond to requests from any of the listed addresses and
+## ports.
+## default: "http://localhost:2379"
 ## example: "http://10.0.0.1:2379"
 ## invalid example: "http://example.com:2379" (domain name is invalid for binding)
-## default: "http://localhost:2379,http://localhost:4001"
 ETCD_LISTEN_CLIENT_URLS="{{ etcd_listen_client_urls }}"
 
-##### -max-snapshots
+##### --max-snapshots
 ## Maximum number of snapshot files to retain (0 is unlimited)
+## The default for users on Windows is unlimited, and manual purging down to 5
+## (or some preference for safety) is recommended.
 ## default: 5
 # ETCD_MAX_SNAPSHOTS="5"
 
-##### -max-wals
+##### --max-wals
 ## Maximum number of wal files to retain (0 is unlimited)
+## The default for users on Windows is unlimited, and manual purging down to 5
+## (or some preference for safety) is recommended.
 ## default: 5
 # ETCD_MAX_WALS="5"
 
-##### -cors
-## Comma-separated whitelist of origins for CORS (cross-origin resource sharing).
+##### --cors
+## Comma-separated white list of origins for CORS (cross-origin resource
+## sharing).
 ## default: none
 # ETCD_CORS
 
-### Clustering Flags
-## For an explanation of the various ways to do cluster setup, see:
-## /usr/share/doc/etcd/Documentation/clustering.md.gz
-##
-## The command line parameters starting with -initial-cluster will be
-## ignored on subsequent runs of etcd as they are used only during initial
-## bootstrap process.
+### Clustering flags
 
-##### -initial-advertise-peer-urls
+# `--initial` prefix flags are used in bootstrapping (static bootstrap,
+# discovery-service bootstrap or runtime reconfiguration) a new member, and
+# ignored when restarting an existing member.
+
+# `--discovery` prefix flags need to be set when using discovery service.
+
+##### --initial-advertise-peer-urls
+
 ## List of this member's peer URLs to advertise to the rest of the cluster.
-## These addresses are used for communicating etcd data around the cluster.
-## At least one must be routable to all cluster members.
-## These URLs can contain domain names.
+## These addresses are used for communicating etcd data around the cluster. At
+## least one must be routable to all cluster members. These URLs can contain
+## domain names.
+## default: "http://localhost:2380"
 ## example: "http://example.com:2380, http://10.0.0.1:2380"
-## default: "http://localhost:2380,http://localhost:7001"
 ETCD_INITIAL_ADVERTISE_PEER_URLS="{{ etcd_initial_advertise_peer_urls }}"
 
-##### -initial-cluster
-## initial cluster configuration for bootstrapping.
-## The key is the value of the `-name` flag for each node provided.
-## The default uses `default` for the key because this is the default for the `-name` flag.
-## default: "default=http://localhost:2380,default=http://localhost:7001"
+##### --initial-cluster
+## Initial cluster configuration for bootstrapping.
+## The key is the value of the `--name` flag for each node provided. The
+## default uses `default` for the key because this is the default for the
+## `--name` flag.
+## default: "default=http://localhost:2380"
 ETCD_INITIAL_CLUSTER="{{ etcd_initial_cluster }}"
 
-##### -initial-cluster-state
+##### --initial-cluster-state
 ## Initial cluster state ("new" or "existing"). Set to `new` for all members
 ## present during initial static or DNS bootstrapping. If this option is set to
-## `existing`, etcd will attempt to join the existing cluster. If the wrong
-## value is set, etcd will attempt to start but fail safely.
+## `existing`, etcd will attempt to join the existing cluster. If the wrong value
+## is set, etcd will attempt to start but fail safely.
 ## default: "new"
 ETCD_INITIAL_CLUSTER_STATE="{{ etcd_initial_cluster_state }}"
 
-##### -initial-cluster-token
+##### --initial-cluster-token
 ## Initial cluster token for the etcd cluster during bootstrap.
-## If you are spinning up multiple clusters (or creating and destroying a
-## single cluster) with same configuration for testing purpose, it is highly
-## recommended that you specify a unique initial-cluster-token for the
-## different clusters.
 ## default: "etcd-cluster"
 ETCD_INITIAL_CLUSTER_TOKEN="{{ etcd_initial_cluster_token }}"
 
-##### -advertise-client-urls
+##### --advertise-client-urls
 ## List of this member's client URLs to advertise to the rest of the cluster.
 ## These URLs can contain domain names.
+## Be careful if advertising URLs such as http://localhost:2379 from a cluster
+## member and are using the proxy feature of etcd. This will cause loops, because
+## the proxy will be forwarding requests to itself until its resources (memory,
+## file descriptors) are eventually depleted.
+## default: "http://localhost:2379"
 ## example: "http://example.com:2379, http://10.0.0.1:2379"
-## Be careful if you are advertising URLs such as http://localhost:2379 from a
-## cluster member and are using the proxy feature of etcd. This will cause loops,
-## because the proxy will be forwarding requests to itself until its resources
-## (memory, file descriptors) are eventually depleted.
-## default: "http://localhost:2379,http://localhost:4001"
 ETCD_ADVERTISE_CLIENT_URLS="{{ etcd_advertise_client_urls }}"
 
-##### -discovery
+##### --discovery
 ## Discovery URL used to bootstrap the cluster.
 ## default: none
 # ETCD_DISCOVERY
 
-##### -discovery-srv
+##### --discovery-srv
 ## DNS srv domain used to bootstrap the cluster.
 ## default: none
 # ETCD_DISCOVERY_SRV
 
-##### -discovery-fallback
-## Expected behavior ("exit" or "proxy") when discovery services fails.
+##### --discovery-fallback
+## Expected behavior ("exit" or "proxy") when discovery services fails. "proxy"
+## supports v2 API only.
 ## default: "proxy"
 # ETCD_DISCOVERY_FALLBACK="proxy"
 
-##### -discovery-proxy
+##### --discovery-proxy
 ## HTTP proxy to use for traffic to discovery service.
 ## default: none
 # ETCD_DISCOVERY_PROXY
 
-### Proxy Flags
+##### --strict-reconfig-check
+## Reject reconfiguration requests that would cause quorum loss.
+## default: false
+# ETCD_STRICT_RECONFIG_CHECK
 
-##### -proxy
+##### --auto-compaction-retention
+## Auto compaction retention for mvcc key value store in hour. 0 means disable
+## auto compaction.
+## default: 0
+# ETCD_AUTO_COMPACTION_RETENTION="0"
+
+
+##### --enable-v2
+## Accept etcd V2 client requests
+## default: true
+# ETCD_ENABLE_V2="true"
+
+### Proxy flags
+
+# `--proxy` prefix flags configures etcd to run in proxy mode. "proxy" supports
+# v2 API only.
+
+##### --proxy
 ## Proxy mode setting ("off", "readonly" or "on").
 ## default: "off"
-# ETCD_PROXY="on"
+# ETCD_PROXY="off"
 
-##### -proxy-failure-wait
-## Time (in milliseconds) an endpoint will be held in a failed state before being
-## reconsidered for proxied requests.
+##### --proxy-failure-wait
+## Time (in milliseconds) an endpoint will be held in a failed state before
+## being reconsidered for proxied requests.
 ## default: 5000
 # ETCD_PROXY_FAILURE_WAIT="5000"
 
-##### -proxy-refresh-interval
+##### --proxy-refresh-interval
 ## Time (in milliseconds) of the endpoints refresh interval.
 ## default: 30000
 # ETCD_PROXY_REFRESH_INTERVAL="30000"
 
-##### -proxy-dial-timeout
+##### --proxy-dial-timeout
 ## Time (in milliseconds) for a dial to timeout or 0 to disable the timeout
 ## default: 1000
 # ETCD_PROXY_DIAL_TIMEOUT="1000"
 
-##### -proxy-write-timeout
+##### --proxy-write-timeout
 ## Time (in milliseconds) for a write to timeout or 0 to disable the timeout.
 ## default: 5000
 # ETCD_PROXY_WRITE_TIMEOUT="5000"
 
-##### -proxy-read-timeout
+##### --proxy-read-timeout
 ## Time (in milliseconds) for a read to timeout or 0 to disable the timeout.
-## Don't change this value if you use watches because they are using long polling requests.
+## Don't change this value if using watches because use long polling requests.
 ## default: 0
 # ETCD_PROXY_READ_TIMEOUT="0"
 
-### Security Flags
+### Security flags
 
-##### -ca-file [DEPRECATED]
-## Path to the client server TLS CA file.
+# The security flags help to build a secure etcd cluster.
+
+##### --ca-file (**DEPRECATED**)
+## Path to the client server TLS CA file. `--ca-file ca.crt` could be replaced
+## by `--trusted-ca-file ca.crt --client-cert-auth` and etcd will perform the
+## same.
 ## default: none
-# ETCD_CA_FILE=""
+# ETCD_CA_FILE
 
-##### -cert-file
+##### --cert-file
 ## Path to the client server TLS cert file.
 ## default: none
 ETCD_CERT_FILE="{{ etcd_cert_file }}"
 
-##### -key-file
+##### --key-file
 ## Path to the client server TLS key file.
 ## default: none
 ETCD_KEY_FILE="{{ etcd_key_file }}"
 
-##### -client-cert-auth
+##### --client-cert-auth
 ## Enable client cert authentication.
 ## default: false
 ETCD_CLIENT_CERT_AUTH={{ etcd_client_cert_auth | default(false) | bool | lower }}
 
-##### -trusted-ca-file
+##### --trusted-ca-file
 ## Path to the client server TLS trusted CA key file.
 ## default: none
 ETCD_TRUSTED_CA_FILE="{{ etcd_trusted_ca_file }}"
 
-##### -peer-ca-file [DEPRECATED]
-## Path to the peer server TLS CA file. `-peer-ca-file ca.crt` could be replaced
-## by `-peer-trusted-ca-file ca.crt -peer-client-cert-auth` and etcd will perform the same.
+##### --auto-tls
+## Client TLS using generated certificates
+## default: false
+ETCD_AUTO_TLS={{ etcd_auto_tls | default(false) | bool | lower }}
+
+##### --peer-ca-file (**DEPRECATED**)
+## Path to the peer server TLS CA file. `--peer-ca-file ca.crt` could be
+## replaced by `--peer-trusted-ca-file ca.crt --peer-client-cert-auth` and etcd
+## will perform the same.
 ## default: none
 # ETCD_PEER_CA_FILE
 
-##### -peer-cert-file
+##### --peer-cert-file
 ## Path to the peer server TLS cert file.
 ## default: none
 ETCD_PEER_CERT_FILE="{{ etcd_peer_cert_file }}"
 
-##### -peer-key-file
+##### --peer-key-file
 ## Path to the peer server TLS key file.
 ## default: none
 ETCD_PEER_KEY_FILE="{{ etcd_peer_key_file }}"
 
-##### -peer-client-cert-auth
+##### --peer-client-cert-auth
 ## Enable peer client cert authentication.
 ## default: false
 ETCD_PEER_CLIENT_CERT_AUTH={{ etcd_peer_client_cert_auth | default(false) | bool | lower }}
 
-##### -peer-trusted-ca-file
+##### --peer-trusted-ca-file
 ## Path to the peer server TLS trusted CA file.
 ## default: none
 ETCD_PEER_TRUSTED_CA_FILE="{{ etcd_peer_trusted_ca_file }}"
 
-### Logging Flags
-##### -debug
+##### --peer-auto-tls
+## Peer TLS using generated certificates
+## default: false
+ETCD_PEER_AUTO_TLS={{ etcd_peer_auto_tls | default(false) | bool | lower }}
+
+### Logging flags
+
+##### --debug
 ## Drop the default log level to DEBUG for all subpackages.
 ## default: false (INFO for all packages)
 # ETCD_DEBUG
 
-##### -log-package-levels
-## Set individual etcd subpackages to specific log levels.
-## An example being `etcdserver=WARNING,security=DEBUG`
+##### --log-package-levels
+## Set individual etcd subpackages to specific log levels. An example being
+## `etcdserver=WARNING,security=DEBUG`
 ## default: none (INFO for all packages)
 # ETCD_LOG_PACKAGE_LEVELS
 
 
-#### Daemon parameters:
-# DAEMON_ARGS=""
+### Unsafe flags
+
+# Please be CAUTIOUS when using unsafe flags because it will break the guarantees given by the consensus protocol.
+# For example, it may panic if other members in the cluster are still alive.
+# Follow the instructions when using these flags.
+
+##### --force-new-cluster
+## Force to create a new one-member cluster. It commits configuration changes
+## forcing to remove all existing members in the cluster and add itself. It needs
+## to be set to restore a backup.
+## default: false
+# ETCD_FORCE_NEW_CLUSTER
