--- a/templates/lib/systemd/system/etcd.service.j2
+++ b/templates/lib/systemd/system/etcd.service.j2
@@ -2,7 +2,7 @@
 
 [Unit]
 Description=etcd - highly-available key value store
-Documentation=https://github.com/coreos/etcd
+Documentation=https://github.com/etcd-io/etcd
 After=network-online.target local-fs.target remote-fs.target time-sync.target
 Wants=network-online.target local-fs.target remote-fs.target time-sync.target
 
@@ -14,7 +14,7 @@ EnvironmentFile=-/etc/default/%p
 Type=notify
 PermissionsStartOnly=true
 #ExecStart=/bin/sh -c "GOMAXPROCS=$(nproc) /usr/bin/etcd $DAEMON_ARGS"
-ExecStart=/usr/local/bin/etcd $DAEMON_ARGS
+ExecStart=/usr/bin/etcd $DAEMON_ARGS
 Restart=on-abnormal
 #RestartSec=10s
 LimitNOFILE=65536
