--- a/templates/etc/default/etcd.j2
+++ b/templates/etc/default/etcd.j2
@@ -113,11 +113,18 @@ ETCD_ADVERTISE_CLIENT_URLS="{{ etcd_advertise_client_urls }}"
 # Enable to run an additional Raft election phase.
 # ETCD_PRE_VOTE="true"
 
-# Auto compaction retention length. 0 means disable auto compaction.
-# ETCD_AUTO_COMPACTION_RETENTION="0"
+##### --auto-compaction-retention
+## Auto compaction retention for mvcc key value store in hour. 0 means disable
+## auto compaction.
+## default: 0
+ETCD_AUTO_COMPACTION_RETENTION="{{ etcd_auto_compaction_retention }}"
 
-# Interpret 'auto-compaction-retention' one of: periodic|revision. 'periodic' for duration based retention, defaulting to hours if no time unit is provided (e.g. '5m'). 'revision' for revision number based retention.
-# ETCD_AUTO_COMPACTION_MODE="periodic"
+##### –auto-compaction-mode
+## Interpret ‘auto-compaction-retention’ one of: ‘periodic’, ‘revision’.
+## ‘periodic’ for duration based retention, defaulting to hours
+## ‘revision’ for revision number based retention.
+## default: periodic
+ETCD_AUTO_COMPACTION_MODE="{{ etcd_auto_compaction_mode }}"
 
 # Accept etcd V2 client requests. Deprecated and to be decommissioned in v3.6.
 # ETCD_ENABLE_V2="false"
