--- a/templates/etc/default/etcd.j2
+++ b/templates/etc/default/etcd.j2
@@ -117,7 +117,7 @@ ETCD_ADVERTISE_CLIENT_URLS="{{ etcd_advertise_client_urls }}"
 ETCD_AUTO_COMPACTION_RETENTION="{{ etcd_auto_compaction_retention }}"
 
 # Interpret 'auto-compaction-retention' one of: periodic|revision. 'periodic' for duration based retention, defaulting to hours if no time unit is provided (e.g. '5m'). 'revision' for revision number based retention.
-# ETCD_AUTO_COMPACTION_MODE="{{ etcd_auto_compaction_mode }}"
+ETCD_AUTO_COMPACTION_MODE="{{ etcd_auto_compaction_mode }}"
 
 # Accept etcd V2 client requests. Deprecated and to be decommissioned in v3.6.
 # ETCD_ENABLE_V2="false"
